# caflood

./: LICENSE  README.md  caddies-NEWS  caddies-README
CMakeModules/: CAAPIAddSrcDir.cmake
Source/: AUTHORS  CMakeLists.txt  LICENSE
Source/CMakeModules/: CAAPIFindImpls.cmake  SubDirList.cmake
Source/apps/caddies-flood/: ArgsData.hpp  CADDIES2D.cpp  CMakeLists.txt  Inflow.cpp  Inflow.hpp  LICENSE  NEWS  Rain.cpp  Rain.hpp  RasterGrid.cpp  RasterGrid.hpp  Setup.cpp  Setup.hpp  TSPlot.cpp  TSPlot.hpp  TimePlot.cpp  TimePlot.hpp  WaterLevel.cpp  WaterLevel.hpp  addRain.ca  computeArea.ca  copy.ca  main.cpp  postProc.cpp  preProc.cpp  removeUpstr.ca  setBoundaryEle.ca  terrainInfo.cpp  updatePEAKC.ca  updatePEAKE.ca  velocityWCA2Dv1.ca  waterdepth.ca  waterdepthWCA2Dv1.ca
Source/apps/game_of_life/: AUTHORS  CMakeLists.txt  LICENSE  NEWS  game_of_life.cpp
Source/impls/common/: Arguments.hpp  AsciiGrid.hpp  Borders.hpp  BoxList.hpp  Clock.hpp  Decomposition.hpp  Masks.hpp  Point.hpp  PointList.hpp  caFuncCreateCellMask.ca  caFuncCreateSimplerCellMask.ca  caempty.hpp
Source/impls/common/CPU/: Functions.hpp
Source/impls/common/GPU/: Options.hpp  caexec2D.hpp
Source/impls/hexagonal-cell/1-levels/simple/: AUTHORS  CellBuff.hpp  EdgeBuff.hpp  NEWS  Table.hpp  ca2D.hpp  caapi2D.hpp
Source/impls/hexagonal-cell/1-levels/simple/extra/: CAAPI_impl.cmake  CAAPI_install.cmake  ImplName.txt  ImplShortName.txt
Source/impls/square-cell/vn-neighbours/1-levels/opencl/: Alarms.hpp  CellBuff.cpp  CellBuff.hpp  ESRI_ASCIIGrid.hpp  EdgeBuff.cpp  Grid.cpp  Grid.hpp  LICENSE  Table.hpp  caapi2D.hpp  kernels.cl
Source/impls/square-cell/vn-neighbours/1-levels/opencl/extra/: CAAPI_ca.cmake  CAAPI_impl.cmake  ImplShortName.txt  clinfo.cpp  config_INTEL_CPU.csv
Source/impls/square-cell/vn-neighbours/1-levels/openmp/: AUTHORS  ESRI_ASCIIGrid.hpp  Functions.hpp  Grid.hpp  caapi2D.hpp
Source/impls/square-cell/vn-neighbours/1-levels/openmp/extra/: CAAPI_impl.cmake  DllPostfix.txt  ImplName.txt  ImplShortName.txt
Source/impls/square-cell/vn-neighbours/1-levels/simple/: Alarms.hpp  CMakeLists.txt  CellBuff.hpp  EdgeBuff.hpp  Functions.hpp  Grid.hpp
Source/impls/square-cell/vn-neighbours/1-levels/simple/extra/: CAAPI_impl.cmake  CAAPI_install.cmake  ImplName.txt  ImplShortName.txt
apps/: CMakeLists.txt  README
apps/caddies-flood/: ArgsData.cpp  ArgsData.hpp  CADDIES2D.cpp  CMakeLists.txt  Inflow.cpp  Inflow.hpp  Rain.cpp  Rain.hpp  RasterGrid.cpp  RasterGrid.hpp  Setup.cpp  Setup.hpp  TSPlot.cpp  TSPlot.hpp  TimePlot.cpp  TimePlot.hpp  WaterLevel.cpp  WaterLevel.hpp  addInflow.ca  addRain.ca  addRaise.ca  computeArea.ca  computeDataCells.ca  computeSlope.ca  copy.ca  infiltration.ca  main.cpp  makeWL.ca  outflowWCA2Dv1.ca  outflowWCA2Dv2.ca  postProc.cpp  preProc.cpp  removeUpstr.ca  setBoundaryEle.ca  terrainInfo.cpp  updatePEAKC.ca  updatePEAKE.ca  velocityDiffusive.ca  velocityWCA2Dv1.ca  waterdepth.ca  (+3 more)
apps/game_of_life/: basic_grid_data.txt  computeStatesN1.ca  game_of_life.cpp
impls/common/: Arguments.hpp  AsciiGrid.hpp  BaseTypes.hpp  Borders.hpp  Box.hpp  BoxList.hpp  Clock.hpp  Common.hpp  Coo.hpp  Decomposition.hpp  Masks.hpp  Point.hpp  PointList.hpp  Utilities.hpp  caFuncCreateCellMask.ca  caFuncCreateSimplerCellMask.ca  caempty.hpp  endca2D.hpp
impls/common/CPU/: Functions.hpp  Options.hpp
impls/common/GPU/: Options.hpp  caexec2D.hpp
impls/hexagonal-cell/1-levels/simple/: Alarms.hpp  CMakeLists.txt  Functions.hpp  Grid.hpp  HexAsciiGrid.hpp  LICENSE  Options.hpp  endca2D.hpp
impls/square-cell/vn-neighbours/1-levels/opencl/: Alarms.hpp  CMakeLists.txt  CellBuff.cpp  CellBuff.hpp  ESRI_ASCIIGrid.hpp  EdgeBuff.cpp  EdgeBuff.hpp  Grid.cpp  Grid.hpp  NEWS  Table.hpp  ca2D.hpp  caapi2D.cl  caapi2D.hpp  cabuffs2D.hpp  kernels.cl
impls/square-cell/vn-neighbours/1-levels/opencl/extra/: ImplName.txt  clinfo.cpp  config_NVIDIA_GPU.csv  convertCA2HPP.cpp
impls/square-cell/vn-neighbours/1-levels/opencl/extra/CL/: cl.hpp
impls/square-cell/vn-neighbours/1-levels/openmp/: Alarms.hpp  CMakeLists.txt  CellBuff.hpp  ESRI_ASCIIGrid.hpp  EdgeBuff.hpp  Functions.hpp  Grid.hpp  LICENSE  NEWS  Options.hpp  ca2D.hpp  caapi2D.hpp
impls/square-cell/vn-neighbours/1-levels/simple/: Alarms.hpp  CellBuff.hpp  ESRI_ASCIIGrid.hpp  EdgeBuff.hpp  Functions.hpp  Grid.hpp  NEWS  Options.hpp  Table.hpp  ca2D.hpp  caapi2D.hpp
